# Engine

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.h  camera.cpp  camera.h  chunks.cpp  chunks.h  indexbuffer.cpp  indexbuffer.h  main.cpp  render.cpp  render.h  shader.cpp  shader.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  window.cpp  window.h
src/include/spdlog/sinks/: systemd_namespace_sink.h
src/shaders/: shader.shader
